# IntercomListener

./: .gitignore  Intercom.pdsprj  Intercom.pdsprj.DMITRIYPC.DmitriyPC.workspace
IntercomListenerEsp32/: CMakeLists.txt  platformio.ini
IntercomListenerEsp32/src/: CMakeLists.txt  Kconfig.projbuild  events.h  led_indicator_task.hpp  log_level.h  main.cpp  telegram.hpp  timer.hpp  wifi.c  wifi.h
Project Backups/: Intercom [20240106, 17-24-34].pdsprj  Intercom [20240106, 17-27-54].pdsprj  Intercom [20240106, 17-30-43].pdsprj  Intercom [20240106, 17-37-33].pdsprj  Intercom [20240106, 17-37-58].pdsprj  Intercom [20240106, 17-41-27].pdsprj  Intercom [20240106, 17-42-12].pdsprj  Intercom [20240106, 17-44-58].pdsprj  Intercom [20240106, 17-51-29].pdsprj  Intercom [20240106, 17-57-09].pdsprj  Intercom [Autosaved].pdsprj
